# Bedrock_reasoning_mode

./: README.md  pyproject.toml
claude3_7/: bedrock.py  bedrock_invoke.py  bedrock_reasoning_class.py
py311/: pyvenv.cfg
py311/Scripts/: activate  activate.bat  jp.py
tests/: test.py
